--- a/templates/elements/navbar.html
+++ b/templates/elements/navbar.html
@@ -1,6 +1,3 @@
-<ul>
-    <li>21</li>
-    <li>21</li>
-    <li>21</li>
-    <li>21</li>
+<ul class="menu">
+    <li><a href="/products">Add Products</a></li>
 </ul>
